# subshelf

./: .gitignore  README.md  pyproject.toml  requirements.txt
subshelf/: __init__.py  bot.py  config.py  crypto.py  dates.py  models.py  quickadd.py  services.py  storage.py
tests/: test_core.py
