[project]
name = "subshelf"
version = "0.1.0"
description = "Telegram-only subscription tracker with encrypted SQLite storage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42",
  "python-dateutil>=2.9",
  "python-telegram-bot>=21.0",
]

[project.scripts]
subshelf = "subshelf.bot:main"

[tool.pytest.ini_options]
pythonpath = ["."]
